socket.io passing the server

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
       
 </head>
 <body>
-     CHAT APPLICATION     
+     CHAT APPLICATION    
+     <script src="/socket.io/socket.io.js"></script>
+     <script src="/js/chat.js"></script> 
 </body>
 </html>
