socket io emiting

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,13 @@
       
 </head>
 <body>
-     CHAT APPLICATION    
+     CHAT APPLICATION  
+     <button id="increement">+1</button>
+
+
+
+
+
      <script src="/socket.io/socket.io.js"></script>
      <script src="/js/chat.js"></script> 
 </body>
