sending message with inpur text and button in a console

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
       
 </head>
 <body>
-     CHAT APPLICATION  
-     <button id="increement">+1</button>
+     <h1>CHAT APPLICATION</h1>  
+     <form id="message_form">
+          <input name="message" type="text" placeholder="message">
+          <button>Send</button>
 
-
+     </form>
 
 
 
