--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
      <form id="message_form">
           <input name="message" type="text" placeholder="message">
           <button>Send</button>
-
      </form>
+
+     <button id="send-location">Send My Location</button>
 
 
 
