--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <Doctype! html> 
 <head>
-      
+     <title>My chat system</title>
 </head>
 <body>
      <h1>CHAT APPLICATION</h1>  
@@ -17,7 +17,13 @@
 
      <script id="message-template" type="text/html">
           <div>
-               <p>{{message}}</p>
+               <p>{{createdAt}} - {{message}}</p>
+          </div>
+     </script>
+
+      <script id="location-message-template" type="text/html">
+          <div>
+               <p>{{createdAt}} - <a href="{{url}}" target="_blank">This is my current Location</a></p>
           </div>
      </script>
 
