--- a/public/index.html
+++ b/public/index.html
@@ -16,60 +16,19 @@
     </head>
 
     <body>
-        <div class="chat">
-            <div class="chat__sidebar">
-
-            </div>
-
-
-            <div class="chat__main">
-                <div id="messages" class="chat__messages"></div>
-
-
-                <div class="compose">
-                     <form id="message_form"> 
-                        <input name="message" type="text" placeholder="Send message...">
-                        <button type="submit"><i class="fas fa-paper-plane"></i> SEND</button>
-                </form>
-                <button id="send-location"><i class="fas fa-globe-americas"></i> SEND MY LOCATION</button>
-                </div>
-            </div>
-        </div>
-
-
-
-
-
-        <script id="message-template" type="text/html">
-            <div class="message">
-               <p>
-                    <span class="message__name">some user name</span>
-                    <span class="message__meta">{{createdAt}}</span>
-               </p>
-               <p>{{message}}</p>
-            </div>
-     </script>
-
-        <script id="location-message-template" type="text/html">
-            <div>
-
-                <p>
-                    <span class="message__name">some user name</span>
-                    <span class="message__meta">{{createdAt}}</span>
-               </p>
-
-               <p><a href="{{url}}" target="_blank">This is my current Location</a></p>
-          </div>
- 
-     </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="/js/chat.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+         <div class="centered-form">
+               <div class="centered-form__box">
+                    <h1>JOIN</h1>
+                    <form action="/chat.html">
+                         <label>display name</label>
+                         <input type="text" name="username" placeholder="Display name" required>
+                         <label>Room</label>
+                         <input type="text" name="room" placeholder="room" required>
+                         <button>Join</button>
+                    </form>
+                    
+               </div>
+         </div>
     </body>
 
     </html>
